--- a/package.json
+++ b/package.json
@@ -4,17 +4,53 @@
     "description": "Fancy i18n editor for *.properties files!",
     "main": "index.js",
     "scripts": {
-        "start": "electron -r babel-register ."
+        "start": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make"
     },
     "author": "",
     "license": "Apache-2.0",
     "dependencies": {
-        "babel-preset-es2015": "^6.24.1",
-        "babel-register": "^6.26.0",
-        "babel-runtime": "^6.26.0",
-        "electron": "^1.7.9",
+        "electron-compile": "^6.4.2",
+        "electron-squirrel-startup": "^1.0.0",
         "font-awesome": "^4.7.0",
         "fs-extra": "^4.0.2",
         "jquery": "^3.2.1"
+    },
+    "devDependencies": {
+        "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "electron-forge": "^4.1.2",
+        "electron-prebuilt-compile": "1.7.9"
+    },
+    "config": {
+        "forge": {
+            "make_targets": {
+                "win32": [
+                    "squirrel"
+                ],
+                "darwin": [
+                    "zip"
+                ],
+                "linux": [
+                    "deb",
+                    "rpm"
+                ]
+            },
+            "electronPackagerConfig": {},
+            "electronWinstallerConfig": {
+                "name": ""
+            },
+            "electronInstallerDebian": {},
+            "electronInstallerRedhat": {},
+            "github_repository": {
+                "owner": "",
+                "name": ""
+            },
+            "windowsStoreConfig": {
+                "packageName": ""
+            }
+        }
     }
 }
