* changed directory structure

--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
     "name": "electron-i18n-editor",
+    "productName": "Electron i18n Editor",
     "version": "0.0.1-SNAPSHOT",
     "description": "Fancy i18n editor for *.properties files!",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
         "start": "electron-forge start",
         "package": "electron-forge package",
         "make": "electron-forge make"
     },
-    "author": "",
+    "author": "Patrick Jackes",
     "license": "Apache-2.0",
     "dependencies": {
+        "electron": "^1.7.9",
         "electron-compile": "^6.4.2",
         "electron-squirrel-startup": "^1.0.0",
         "font-awesome": "^4.7.0",
@@ -38,9 +40,12 @@
                     "rpm"
                 ]
             },
-            "electronPackagerConfig": {},
+            "electronPackagerConfig": {
+                "asar": true,
+                "quiet": false
+            },
             "electronWinstallerConfig": {
-                "name": ""
+                "name": "electron-i18n-editor"
             },
             "electronInstallerDebian": {},
             "electronInstallerRedhat": {},
