--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: yarn run publish --all
+  script: yarn run publish --all --tag="$TRAVIS_TAG"
   on:
     tags: true
 env:
