* bump version number and fix build script again

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "electron-i18n-editor",
     "productName": "Electron i18n Editor",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "Fancy i18n editor for *.properties files!",
     "main": "src/index.js",
     "scripts": {
@@ -54,7 +54,7 @@
             "electronInstallerRedhat": {},
             "github_repository": {
                 "owner": "burnerpat",
-                "name": "electron-i18n-editor"
+                "name": "electron-18n-editor"
             },
             "windowsStoreConfig": {
                 "packageName": ""
