* version bump + updated build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,7 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script:
-    - yarn run publish --platform=win32 --arch=ia32 --tag="$TRAVIS_TAG"
-    - yarn run publish --platform=win32 --arch=x64 --tag="$TRAVIS_TAG"
-    - yarn run publish --platform=linux --arch=ia32 --tag="$TRAVIS_TAG"
-    - yarn run publish --platform=linux --arch=x64 --tag="$TRAVIS_TAG"
+  script: ci/travis-deploy.sh
   on:
     tags: true
 env:
